react-vite/src/components/Navigation/Navigation.css
.profile-dropdown {
  /* position: absolute; */
}

.profile-button {
  display: flex;
  padding-left: 250px;
  color: red
}


/*
.toppage {
  width: 300px;
  display: flex;
  justify-content: right;
  position: relative;
} */

.logo {
  display: flex;
  padding-left: 350px;
  margin-top: 30px;

}

/* .logo:hover {
  transform: rotate(360deg);
} */



.wumlogo {
  display: flex;
  margin-left: 30px;
  width: 150px;
  margin-bottom: 20px;
  cursor: pointer;
}

.ad {
  cursor: pointer;
  margin-left: 10px;
  display: inline-flex;
  padding-left: 550px;
  padding-top: 20px;
  margin-bottom: 600px;
}

.create-word {
  font-size: 20px;
  margin-right: 18px;
}



.right-main {
  display: flex;
  /* align-items: center; */
  justify-content: flex-end;
  /* flex-grow: 1; */
  margin-left: 20px;
  position: fixed;
  /* z-index: 60; */
  top: 15px;
  right:30px
}

.search-bar {
  display: flex;
  /* position: fixed; */
  /* top: 10px; */
  /* right: 220px; */
  height: 34px;
  /* max-width: 279px; */
  width: 100%;
  /* padding: 13px; */
  text-align: left;
  background-color: #405368;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  padding-left: 25px;
  color: #BCC3CA;


}

.wummoble {
  display: none;
  height: 40px ;
  width: 40px;
  cursor: pointer;
}


#search-icon {
  display: flex;
  color: #BCC3CA;
}

.search-bar::placeholder {
  color: #BCC3CA;
}

.search-bar:hover {
  cursor: not-allowed;
}

.nav-bar {
  /* position: sticky; */
  flex-direction: column;
  width: fit-content;
  display: inline-flex;

}
.float-bar {
  display: flex;
  flex-direction: row;
}
.box-one {
  width: fit-content;
  display: flex;
  position: sticky;
  top: 0
}

.sticky-header {
/* border: solid 1px green;
height: 100%; */
position: sticky;
/* position:fixed; */
top: 0;
left: 80px;
height: fit-content;
padding: 10px;
}

.left-main {
  position: static;
  top: 0;
  padding: 10px;


  /* border: none; */
  display: flex;
  flex-direction: column;
  /* height: 100%; */
  /* justify-content: space-evenly; */
  /* border-right: 1px solid #ccc; */
  width: fit-content;
  /* margin-right: 20px; */



}

.bottom-main {
  display: flex;

}
.home-button {
  cursor: pointer;
  width: 200px;
  margin: 5px;
  padding: 10px;
  background-color: transparent;
  color: #fff;
  border: none;
  cursor: pointer;
  display: flex;

}

.home-button:hover {
  background-color: #122943;
}

.explore-button {
  display: flex;
  cursor: pointer;
  width: 200px;
  margin: 5px;
  padding: 10px;
  background-color: transparent;
  color: #fff;
  border: none;
  cursor: pointer;
  /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); */

}

.explore-button:hover {
  background-color: #122943;
}

.explore-button:hover {
  cursor: not-allowed;
}
.activity-button {
  cursor: pointer;
  width: 200px;
  margin: 5px;
  padding: 10px;
  background-color: transparent;
  color: #fff;
  border: none;
  cursor: pointer;
  display: flex;

}

.activity-button:hover {
  background-color: #122943;
}
.activity-button:hover {
  cursor: not-allowed;
}
.messages-button {
  cursor: pointer;
  background-color: #36465d;
  width: 200px;
  margin: 5px;
  padding: 10px;
  display: flex;
  background-color: transparent;
  color: #fff;
  border: none;
  cursor: pointer;
  /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); */
}

.messages-button:hover {
  background-color: #122943
}
.messages-button:hover {
  cursor: not-allowed;
}

.inbox-button {
  cursor: pointer;
  width: 200px;
  margin: 5px;
  padding: 10px;
  background-color: transparent;
  color: #fff;
  border: none;
  cursor: pointer;
  /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); */
  display: flex;
}

.inbox-button:hover {
  background-color: #122943
}
.inbox-button:hover {
  cursor: not-allowed;
}

.account-button {
  cursor: pointer;
  width: 200px;
  margin: 5px;
  padding: 10px;
  background-color: transparent;
  color: #fff;
  border: none;
  cursor: pointer;
  /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); */
  display: flex;
}

.account-button:hover {
  background-color: #122943
}
.account-button:hover {
  cursor: not-allowed;
}

.create-post:hover {
  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0);
}

.create-post {
  cursor: pointer;
  background-color: #00B8FF;
  color: #000;
  padding: 10px 20px;
  border: none;
  border-radius: 40px;
  cursor: pointer;
  font-size: 20px;
  font-weight: bold;
  width: 200px;
  height: 45px;
  /* font-size: 25px; */
}

.log-in {
  display: flex;
  cursor: pointer;
  width: 200px;
  margin: 5px;
  padding: 10px;
  background-color: transparent;
  color: #fff;
  border: none;
  cursor: pointer;
  /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); */

}

.log-in:hover {
  background-color: #122943;
}

.signup {
  display: flex;
  cursor: pointer;
  width: 200px;
  margin: 5px;
  padding: 10px;
  background-color: transparent;
  color: #fff;
  border: none;
  cursor: pointer;
  /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); */

}

.signup:hover {
  background-color: #122943;
}


.log-out-button {
  cursor: pointer;
  background-color: #36465d;
  width: 200px;
  margin: 5px;
  padding: 10px;
  background-color: transparent;
  color: #fff;
  border: none;
  cursor: pointer;
  /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); */
  display: flex;
}

.log-out-button:hover {
  background-color: #122943;
}
.box-floor {
  /* display: none; */
  width: fit-content;
  display: none;
  position:fixed;
  bottom: 0px;
  right: 50%;
  transform: translateX(50%);
  z-index: 3;
  background-color: black;
}

.test {
  display: flex;
  flex-direction: row;
  padding: 8px;
  border-radius: 8px;

}
.glass-button {
  cursor: pointer;
  background-color: #36465d;
  width: 200px;
  margin: 5px;
  padding: 10px;
  background-color: transparent;
  color: #fff;
  border: none;
  cursor: pointer;
  /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); */
  display: flex;
}

.glass-button:hover {
  background-color: #122943;
  cursor: not-allowed;
}

@media (max-width: 1023px) {
  .search-bar {
    display: none;
  }
  .sticky-header span {
    display: none;
    width: fit-content;

}
.wummoble {
  display:flex;
}
.left-main{
  width: auto;
}

.wumlogo {
  display: none;
}

  .create-post {
    display: flex;
    align-items: center;
   justify-content: center;
    width: 50px;
    height: 40px;
  }
  .log-in-button, .glass-button, .log-in, .signup, .log-out-button, .account-button, .explore-button, .activity-button, .messages-button, .inbox-button, .home-button {
    width: fit-content;
  }
  .box-floor{
    display: flex;

  }
  .auth {
    display: flex;
  }
  .box-one {
    display: none;
  }
  .test span {
    display: none;
    width: fit-content;
  }
  .all-posts{
    top: 0
  }
}

